public/less/MySkills.less
#myskills {
  padding-top:80px;
  background: #202020;
  h1 {
    top:-100px;
    margin:0;
    display: inline-block;
    position: relative;
    text-align: center;
    background:lighten(@dark-background-color, 5%);
    color:@primary-text-color;
    padding:2px 20px;
  }
  .SkillCards {
    text-align: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    .SkillCard {
      margin-top: 30px;
      background: lighten(@dark-background-color, 10%);
      border-radius: 15px;;
      .SkillCardImage {
        position: relative;
        img {
          position:absolute;
          width:80%;
          top:0;
          bottom:0;
          left:0;
          right:0;
        }
      }
    }
  }
}

